--- a/Day11-HW.ipynb
+++ b/Day11-HW.ipynb
@@ -4419,12 +4419,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7a508e9-de1f-4273-9470-8cc44334d421",
+   "cell_type": "markdown",
+   "id": "c44e0182-c0d7-46bb-942c-a4627ba2a79e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "meep"
+   ]
   },
   {
    "cell_type": "markdown",
